force-app/main/default/objects/cgcloud__Promotion__c/cgcloud__Promotion__c.object-meta.xml
<CustomObject>
    <description>Promotion is an activity of a user which includes the definition of prices for a time segment.</description>
    <label>Advanced Promotion</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advanced Promotions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>