force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_IsBypassValidationRule__c.field-meta.xml
<CustomField>
    <fullName>TPM_IsBypassValidationRule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To bypass Validation rule in test classes</description>
    <label>IsBypassValidationRule</label>
    <type>Checkbox</type>
</CustomField>