force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_Last_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>TPM_Last_Approved_Date__c</fullName>
    <description>The date that this promotion was last approved.</description>
    <label>Last Approved Date</label>
    <type>Date</type>
</CustomField>