force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_Overlap_Check__c.field-meta.xml
<CustomField>
    <fullName>TPM_Overlap_Check__c</fullName>
    <label>Overlap Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>