force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_Overlap_Check_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>TPM_Overlap_Check_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Overlap Check in Progress</description>
    <label>Overlap Check In Progress</label>
    <type>Checkbox</type>
</CustomField>