force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_OverLap_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>TPM_OverLap_Check_Status__c</fullName>
    <label>Over Lap Check Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>