force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_Overlap_Details__c.field-meta.xml
<CustomField>
    <fullName>TPM_Overlap_Details__c</fullName>
    <label>TPM_Overlap_Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>