force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_Phase__c.field-meta.xml
<CustomField>
    <fullName>TPM_Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Finance Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>