force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_Planned_Spend__c.field-meta.xml
<CustomField>
    <fullName>TPM_Planned_Spend__c</fullName>
    <label>Planned Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>