force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_Promotion_Submitter__c.field-meta.xml
<CustomField>
    <fullName>TPM_Promotion_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TPM_AdvancedPromotions</relationshipName>
    <type>Lookup</type>
</CustomField>