force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_Push_Failed__c.field-meta.xml
<CustomField>
    <fullName>TPM_Push_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push Failed</label>
    <type>Checkbox</type>
</CustomField>