force-app/main/default/objects/cgcloud__Promotion__c/fields/TPM_SVF__c.field-meta.xml
<CustomField>
    <fullName>TPM_SVF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on SVF based on business year and start date of promotion for Promotion Object</description>
    <label>Sales Volume Forecast</label>
    <referenceTo>cgcloud__Account_Plan__c</referenceTo>
    <relationshipLabel>Advanced Promotions</relationshipLabel>
    <relationshipName>Advanced_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>