force-app/main/default/objects/cgcloud__Promotion__c/validationRules/cgcloud__Delivery_Date_From_and_Thru_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Delivery_Date_From_and_Thru_Validation</fullName>
    <active>false</active>
    <description>Delivery Date From can&apos;t be later than Delivery Date Thru.</description>
    <errorConditionFormula>cgcloud__Delivery_Date_From__c  &gt;  cgcloud__Delivery_Date_Thru__c</errorConditionFormula>
    <errorMessage>Delivery Date From can&apos;t be later than Delivery Date Thru.</errorMessage>
</ValidationRule>