force-app/main/default/objects/cgcloud__Promotion__c/validationRules/cgcloud__Placement_Date_From_and_Thru_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Placement_Date_From_and_Thru_Validation</fullName>
    <active>false</active>
    <description>Placement Date From can&apos;t be later than Placement Date Thru.</description>
    <errorConditionFormula>cgcloud__Placement_Date_From__c  &gt;  cgcloud__Placement_Date_Thru__c</errorConditionFormula>
    <errorMessage>Placement Date From can&apos;t be later than Placement Date Thru.</errorMessage>
</ValidationRule>