force-app/main/default/objects/cgcloud__Promotion__c/validationRules/TPM_Promotion_Date_Same_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Promotion_Date_Same_Year</fullName>
    <active>true</active>
    <description>To check if all the Promotion Date Year falls under the Same Year</description>
    <errorConditionFormula>OR(
YEAR(cgcloud__Placement_Date_From__c )&lt;&gt;YEAR(cgcloud__Placement_Date_Thru__c ),
YEAR(cgcloud__Placement_Date_From__c )&lt;&gt;YEAR( cgcloud__Delivery_Date_From__c ),
YEAR(cgcloud__Placement_Date_From__c )&lt;&gt;YEAR( cgcloud__Delivery_Date_Thru__c ),
YEAR(cgcloud__Placement_Date_From__c )&lt;&gt;YEAR( cgcloud__Commit_Date__c )
)</errorConditionFormula>
    <errorMessage>All the Promotion Date should fall under the Same Year.</errorMessage>
</ValidationRule>