force-app/main/default/objects/cgcloud__Promotion__c/validationRules/TPM_Promotion_InstoreStartValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Promotion_InstoreStartValidation</fullName>
    <active>true</active>
    <description>Instore Start Date must be greater than or equal to the current date</description>
    <errorConditionFormula>ISPICKVAL(TPM_Phase__c , &apos;Planning&apos;)&amp;&amp;  cgcloud__Placement_Date_From__c  &lt; TODAY()</errorConditionFormula>
    <errorMessage>Instore Start Date must be greater than or equal to the current date</errorMessage>
</ValidationRule>