force-app/main/default/objects/cgcloud__Promotion__c/validationRules/TPM_Promotion_Phase_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Promotion_Phase_Change</fullName>
    <active>false</active>
    <description>User cannot choose Submit for Approval until the Promotion is in Planning status</description>
    <errorConditionFormula>NOT(ISPICKVAL(PRIORVALUE( TPM_Phase__c ), &quot;Planning&quot;)) &amp;&amp; ISPICKVAL(TPM_Phase__c, &quot;Submitted For Approval&quot;)</errorConditionFormula>
    <errorMessage>You cannot choose Submit for Approval until the Promotion is in Planning status.</errorMessage>
</ValidationRule>