force-app/main/default/objects/cgcloud__Promotion__c/validationRules/TPM_Promotion_ShipmentStartValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Promotion_ShipmentStartValidation</fullName>
    <active>true</active>
    <description>Validates if Shipment start date is greater than or equal to the current date</description>
    <errorConditionFormula>ISPICKVAL(TPM_Phase__c  , &apos;Planning&apos;)&amp;&amp; cgcloud__Delivery_Date_From__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Shipment Start Date must be greater than or equal to the current date</errorMessage>
</ValidationRule>