force-app/main/default/objects/cgcloud__Promotion__c/validationRules/TPM_Promotion_should_span_within_a_year.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Promotion_should_span_within_a_year</fullName>
    <active>true</active>
    <description>Promotion InStoreDatesshould be created within the same Calendar Year</description>
    <errorConditionFormula>YEAR(cgcloud__Placement_Date_Thru__c )&lt;&gt;YEAR(cgcloud__Placement_Date_From__c )</errorConditionFormula>
    <errorMessage>Promotion InstoreDates should be created within the same Calendar Year</errorMessage>
</ValidationRule>