force-app/main/default/objects/cgcloud__Promotion__c/validationRules/TPMInstoreStartDateEndDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TPMInstoreStartDateEndDateValidation</fullName>
    <active>true</active>
    <description>Checks if instore start date is less than or equal to end date</description>
    <errorConditionFormula>(cgcloud__Placement_Date_From__c  &gt; cgcloud__Placement_Date_Thru__c )</errorConditionFormula>
    <errorMessage>In-Store Date From can&apos;t be later than In-Store Date Thru</errorMessage>
</ValidationRule>