force-app/main/default/objects/cgcloud__Promotion__c/validationRules/TPMPromotionShipmentInstoreEndValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TPMPromotionShipmentInstoreEndValidation</fullName>
    <active>true</active>
    <description>Shipment End date must be less than or equal to In-store end date</description>
    <errorConditionFormula>ISPICKVAL( TPM_Phase__c,&apos;Planning&apos;)  &amp;&amp; (cgcloud__Delivery_Date_Thru__c  &gt; cgcloud__Placement_Date_Thru__c)</errorConditionFormula>
    <errorMessage>Shipment End date must be less than or equal to In-store end date</errorMessage>
</ValidationRule>