force-app/main/default/objects/cgcloud__Promotion__c/validationRules/TPMShipmentStartEndDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TPMShipmentStartEndDateValidation</fullName>
    <active>true</active>
    <description>Shipment Start data must always be less than end date.</description>
    <errorConditionFormula>cgcloud__Delivery_Date_From__c &gt; cgcloud__Delivery_Date_Thru__c</errorConditionFormula>
    <errorMessage>Shipment Date From can&apos;t be later than Shipment Date Thru</errorMessage>
</ValidationRule>