force-app/main/default/objects/cgcloud__Promotion__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Slogan__c</columns>
    <columns>cgcloud__Promotion_Template__c</columns>
    <columns>cgcloud__Date_From__c</columns>
    <columns>cgcloud__Date_Thru__c</columns>
    <columns>TPM_Phase__c</columns>
    <columns>cgcloud__Anchor_Account__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>