force-app/main/default/objects/cgcloud__Promotion__c/listViews/cgcloud__TPM_Promotions.listView-meta.xml
<ListView>
    <fullName>cgcloud__TPM_Promotions</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Slogan__c</columns>
    <columns>cgcloud__Promotion_Template__c</columns>
    <columns>cgcloud__Date_From__c</columns>
    <columns>cgcloud__Date_Thru__c</columns>
    <columns>TPM_Phase__c</columns>
    <columns>cgcloud__Anchor_Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cgcloud__Promotion__c.cgcloud__Promotion</value>
    </filters>
    <label>TPM Promotions</label>
</ListView>